--- a/app/index.html
+++ b/app/index.html
@@ -6,8 +6,10 @@
   <title>My Pixi Project</title>
   <style>
     html, body, canvas {
-      width: 100%;
-      height: 100%;
+      /* width: 100%;
+      // height: 100%; */
+      width: 800px;
+      height: 800px;
       margin: 0;
       overflow: hidden;
     }
