--- a/app/index.html
+++ b/app/index.html
@@ -5,20 +5,60 @@
   <meta name="viewport" content="width=device-width" />
   <title>禁ガチャシステム</title>
   <style>
-    html, body, canvas {
-      /* width: 100%;
-      // height: 100%; */
-      width: 800px;
-      height: 800px;
-      margin: auto;
-      overflow: hidden;
-    }
+    html, body, canvas { width: 800px; height: 800px; margin: auto; overflow: hidden; }
+    .social-area { width: 100%; min-height: 20px; padding: 0 0; }
+    @media screen and ( min-width:480px ) { .social-area { min-height: 20px; } }
+    ul.social-button { width: 238px; margin: 0 auto; padding: 0; border: none; list-style-type: none; }
+    @media screen and ( min-width:480px ) { ul.social-button { width: 700px; margin: 0; } }
+    ul.social-button li { float: left; text-align: center; height: 31px; margin: 0 8px; padding: 0; }
+    .google-social { height: 20px; width: 70px; margin: 0 8px; padding: 0; display: inline-block; }
+    .sc-tw { width: 71px; }
+    .sc-tw svg { width: 30px; height: 30px; }
+    .sc-tw a { height: 56px; margin: 0 auto; padding-top: 6px; display: block; background: #1B95E0; font-size: 12px; color: #fff; font-weight: 700; text-decoration: none; letter-spacing: .5px; border-radius: 2px; }
+    .sc-tw a:hover { color: #fff; background: #0c7abf; }
+    .sc-tw span:before { white-space: pre; content: '\A'; }
+    .sc-fb { z-index: 99; width: 69px; }
+    .sc-li { width: 50px; }
+    .sc-li-img { border: none; margin: 0 auto; padding: 0; width: 36px; height: 60px; }
+    @media screen and ( min-width:480px ) { .sc-li { display: none; } }
   </style>
 </head>
 <body>
   <h2>禁ガチャシステム</h2>
   <p>ガチャ中毒を抜け出すためのシステムです。ガチャをやりたくなったらやってください。</p>
   <p>家計が楽になります。飽きたら絵や確率を変更してください。</p>
+  <div class="social-area">
+    <ul class="social-button">
+      <li><a href="https://twitter.com/share" class="twitter-share-button"
+             data-url="http://cncgl.github.io/pixi-reno/" data-text="禁ガチャシステム"
+             data-via="subcigel" data-lang="ja">ツイート</a></li>
+      <li><div class="fb-share-button" data-href="http://cncgl.github.io/pixi-reno/"
+               data-layout="button_count"></div></li>
+      <li><div class="google-social"><div class="g-plusone" data-size="medium"></div></div></li>
+      <li><a href="http://b.hatena.ne.jp/entry/http://cncgl.github.io/pixi-reno/"
+             class="hatena-bookmark-button" data-hatena-bookmark-title="禁ガチャシステム"
+             data-hatena-bookmark-layout="simple-balloon" title="このエントリーをはてなブックマークに追加">
+        <img src="https://b.st-hatena.com/images/entry-button/button-only@2x.png"
+             alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a></li>
+      <li><a data-pocket-label="pocket" data-pocket-count="horizontal" class="pocket-btn" data-lang="ja"></a></li>
+    </ul>
+        <span>
+          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+          <div id="fb-root"></div>
+          <script>(function(d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s); js.id = id;
+            js.src = "//connect.facebook.net/ja_KS/sdk.js#xfbml=1&version=v2.5&appId=492442180768939";
+            fjs.parentNode.insertBefore(js, fjs);
+          }(document, 'script', 'facebook-jssdk'));</script>
+          <script src="https://apis.google.com/js/platform.js" async defer>
+            {lang: 'ja'}
+          </script>
+          <script type="text/javascript" src="https://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
+          <script type="text/javascript">!function(d,i){if(!d.getElementById(i)){var j=d.createElement("script");j.id=i;j.src="https://widgets.getpocket.com/v1/j/btn.js?v=1";var w=d.getElementById(i);d.body.appendChild(j);}}(document,"pocket-btn-js");</script>
+        </span>
+  </div>
   <div id="canvas"></div>
   <a href="https://github.com/cncgl/pixi-reno"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
   <script src="bundle.js"></script>
