add hashtag on twitter

--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
   <div class="social-area">
     <ul class="social-button">
       <li><a href="https://twitter.com/share" class="twitter-share-button"
-             data-url="http://cncgl.github.io/pixi-reno/" data-text="禁ガチャシステム"
+             data-url="http://cncgl.github.io/pixi-reno/" data-text="禁ガチャシステム" data-hashtags="禁ガチャシステム"
              data-via="subcigel" data-lang="ja">ツイート</a></li>
       <li><div class="fb-share-button" data-href="http://cncgl.github.io/pixi-reno/"
                data-layout="button_count"></div></li>
